--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
        <a href="">WebStudio</a>
            
                <ul>
-                   <li> <a href="">Студия</a></li>
+                   <li> <a href="./studio.html">Студия</a></li>
                    <li> <a href="">Портфолио</a></li>
                    <li> <a href="">Контакты</a></li>
                </ul>
