--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <a href="">WebStudio</a>
            
                <ul>
-                   <li> <a href="./studio.html">Студия</a></li>
+                   <li> <a href="./potrfolio.html">Студия</a></li>
                    <li> <a href="">Портфолио</a></li>
                    <li> <a href="">Контакты</a></li>
                </ul>
