--- a/potrfolio.html
+++ b/potrfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 <body>
 
@@ -13,7 +15,7 @@
         <a href="./index.html">WebStudio</a>
             
                 <ul>
-                    <li> <a href="./studio.html">Студия</a></li>
+                    <li> <a href="./potrfolio.html">Студия</a></li>
                     <li> <a href="">Портфолио</a></li>
                     <li> <a href="">Контакты</a></li>
                 </ul>
@@ -23,6 +25,7 @@
                     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
      </header> 
+     <main>
      <ul>
          <li>
              <button>Все</button>
@@ -91,11 +94,14 @@
              </li>
          </ul>
      </section>
+    </main>
+
      <footer>
          <a href="./index.html">WebStudio</a>
          <address>
              <ul>
-                 <li></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
              </ul>
          </address>
      </footer>
