--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <!--шапка-->
-   <header>
+   <header class="pige-header">
        <nav>
-       <a href="">WebStudio</a>
+       <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
                <ul>
                    <li> <a href="./potrfolio.html">Студия</a></li>
@@ -29,7 +30,7 @@
     <main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-       <button>Заказать услугу</button> 
+       <button class="hero-btn">Заказать услугу</button> 
     </section>
 
     <!--особености-->
@@ -105,19 +106,13 @@
   </section>
   </main>
   <footer>
-    <a href="">WebStudio</a>
+    <a clas="title" href=""><span class="logo">Web</span>Studio</a>
     <address>
-        <ul>
-            <li>
-                <a href="">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
+
+       <p><a href="">г. Киев, пр-т Леси Украинки, 26</a></p>
+       <p><a href="mailto:info@example.com">info@example.com</a></p>
+       <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+    
     </address>
   </footer>
    
