--- a/potrfolio.html
+++ b/potrfolio.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
@@ -28,19 +29,19 @@
      <main>
      <ul>
          <li>
-             <button>Все</button>
+             <button class="btn">Все</button>
          </li>
          <li>
-             <button>Веб-сайты</button>
+             <button class="btn">Веб-сайты</button>
          </li>
          <li>
-             <button>Приложения</button>
+             <button class="btn">Приложения</button>
          </li>
          <li>
-             <button>Дизайн</button>
+             <button class="btn">Дизайн</button>
          </li>
          <li>
-             <button>Маркетинг</button>
+             <button class="btn">Маркетинг</button>
          </li>
      </ul>
      <!--наши-работы-->
@@ -99,10 +100,9 @@
      <footer>
          <a href="./index.html">WebStudio</a>
          <address>
-             <ul>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-             </ul>
+            <p><a href="">г. Киев, пр-т Леси Украинки, 26</a></p>
+            <p><a href="mailto:info@example.com">info@example.com</a></p>
+            <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
          </address>
      </footer>
 </body>
