--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="page">
 
     <!--шапка-->
-   <header class="pige-header">
+   <header>
        <nav>
        <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
-               <ul>
-                   <li> <a href="./potrfolio.html">Студия</a></li>
-                   <li> <a href="">Портфолио</a></li>
-                   <li> <a href="">Контакты</a></li>
+               <ul class="site-nav">
+                   <li> <a href="./potrfolio.html" class="link">Студия</a></li>
+                   <li> <a href="" class="link">Портфолио</a></li>
+                   <li> <a href="" class="link">Контакты</a></li>
                </ul>
         </nav>
-               <ul>
-                   <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                   <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+               <ul class="contact">
+                   <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
+                   <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
                </ul>
     </header> 
 
