--- a/index.html
+++ b/index.html
@@ -28,38 +28,38 @@
 
     <!--герой-->
     <main>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+    <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
        <button class="hero-btn">Заказать услугу</button> 
     </section>
 
     <!--особености-->
-    <section>
-              <h2>особености</h2>
-              <ul>
+    <section class="section">
+              <h2 class="visually-hidden">особености</h2>
+              <ul class="feature-list">
                   <li>
-                      <h3>Внимание к деталям</h3>
+                      <h3 class="title">Внимание к деталям</h3>
                       <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                   </li>
                   <li>
-                      <h3>Пунктуальность</h3>
+                      <h3 class="title">Пунктуальность</h3>
                       <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                   </li>
                   <li>
-                      <h3>Планирование</h3>
+                      <h3 class="title">Планирование</h3>
                       <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                   </li>
                   <li>
-                      <h3>Современные</h3>
+                      <h3 class="title">Современные</h3>
                       <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                   </li>
               </ul>
     </section>
 
     <!--занетасть-->
-    <section>
-              <h2>Чем мы занимаемся</h2>
-              <ul>
+    <section class="section">
+              <h2 class="section-title">Чем мы занимаемся</h2>
+              <ul class="feature-list">
                   <li>
                      <a href="">
                           <img src="./images/box-1.jpg" alt="компютер">
@@ -79,39 +79,41 @@
     </section>
 
   <!--команда-->
-  <section>
-    <h2>Наша команда</h2>
-      <ul>
+  <section class="section">
+    <h2 class="section-title">Наша команда</h2>
+      <ul class="subtitle">
           <li>
               <img src="./images/img.jpg" alt="Product Designer">
-              <h3>Игорь Демьяненко</h3>
+              <h3 class="item">Игорь Демьяненко</h3>
               <p>Product Designer</p>
           </li>
           <li>
               <img src="./images/img-(1).jpg" alt="Frontend Developer">
-              <h3>Ольга Репина</h3>
+              <h3 class="item">Ольга Репина</h3>
               <p>Frontend Developer</p>
           </li>
           <li>
               <img src="./images/img-(2).jpg" alt="Marketing">
-              <h3>Николай Тарасов</h3>
+              <h3 class="item">Николай Тарасов</h3>
               <p>Marketing</p>
           </li>
           <li>
               <img src="./images/img-(3).jpg" alt="UI Designer">
-              <h3>Михаил Ермаков</h3>
+              <h3 class="item">Михаил Ермаков</h3>
               <p>UI Designer</p>
           </li>
       </ul>
   </section>
   </main>
-  <footer>
-    <a clas="title" href=""><span class="logo">Web</span>Studio</a>
-    <address>
+  <footer class="footer">
+    <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
+    <address class="adres">
 
-       <p><a href="">г. Киев, пр-т Леси Украинки, 26</a></p>
-       <p><a href="mailto:info@example.com">info@example.com</a></p>
-       <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+       <ul class="contact">
+        <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
+    </ul>
     
     </address>
   </footer>
