--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -15,14 +17,14 @@
        <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
                <ul class="site-nav">
-                   <li> <a href="./potrfolio.html" class="link">Студия</a></li>
-                   <li> <a href="" class="link">Портфолио</a></li>
+                   <li> <a href="./index.html" class="link carent">Студия</a></li>
+                   <li> <a href="./potrfolio.html" class="link">Портфолио</a></li>
                    <li> <a href="" class="link">Контакты</a></li>
                </ul>
         </nav>
                <ul class="contact">
-                   <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
-                   <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
+                   <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                   <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                </ul>
     </header> 
 
@@ -30,7 +32,7 @@
     <main>
     <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-       <button class="hero-btn">Заказать услугу</button> 
+       <button class="button">Заказать услугу</button> 
     </section>
 
     <!--особености-->
@@ -39,19 +41,19 @@
               <ul class="feature-list">
                   <li>
                       <h3 class="title">Внимание к деталям</h3>
-                      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                      <p class="desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                   </li>
                   <li>
                       <h3 class="title">Пунктуальность</h3>
-                      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                      <p class="desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                   </li>
                   <li>
                       <h3 class="title">Планирование</h3>
-                      <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                      <p class="desc">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                   </li>
                   <li>
                       <h3 class="title">Современные</h3>
-                      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                      <p class="desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                   </li>
               </ul>
     </section>
@@ -81,26 +83,26 @@
   <!--команда-->
   <section class="section">
     <h2 class="section-title">Наша команда</h2>
-      <ul class="subtitle">
+      <ul>
           <li>
               <img src="./images/img.jpg" alt="Product Designer">
               <h3 class="item">Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <p class="link">Product Designer</p>
           </li>
           <li>
               <img src="./images/img-(1).jpg" alt="Frontend Developer">
               <h3 class="item">Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <p class="link">Frontend Developer</p>
           </li>
           <li>
               <img src="./images/img-(2).jpg" alt="Marketing">
               <h3 class="item">Николай Тарасов</h3>
-              <p>Marketing</p>
+              <p class="link">Marketing</p>
           </li>
           <li>
               <img src="./images/img-(3).jpg" alt="UI Designer">
               <h3 class="item">Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <p class="link">UI Designer</p>
           </li>
       </ul>
   </section>
@@ -110,7 +112,7 @@
     <address class="adres">
 
        <ul class="contact">
-        <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
         <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
     </ul>
