color-text-pages

--- a/potrfolio.html
+++ b/potrfolio.html
@@ -52,32 +52,32 @@
              <li>
                  <img src="./images/studio-1.jpg" alt="Технокряк">
                  <h2 class="title">Технокряк</h2>
-                 <p>Веб-сайт</p>
+                 <p class="list">Веб-сайт</p>
              </li>
              <li>
                  <img src="./images/studio-2.jpg" alt="Постер">
                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                 <p>Дизайн</p>
+                 <p class="list">Дизайн</p>
              </li>
              <li>
                  <img src="./images/studio-3.jpg" alt="Названіе ресторана">
                  <h2 class="title">Ресторан Seafood</h2>
-                 <p>Приложение</p>
+                 <p class="list">Приложение</p>
              </li>
              <li>
                  <img src="./images/studio-4.jpg" alt="Наушники">
                  <h2 class="title">Проект Prime</h2>
-                 <p>Маркетинг</p>
+                 <p class="list">Маркетинг</p>
              </li>
              <li>
                  <img src="./images/studio-5.jpg" alt="Проект Boxes">
                  <h2 class="title">Проект Boxes</h2>
-                 <p>Приложение</p>
+                 <p class="list">Приложение</p>
              </li>
              <li>
                  <img src="./images/studio-6.jpg" alt="Inspiration has no Borders">
                  <h2 class="title">Inspiration has no Borders</h2>
-                 <p>Веб-сайт</p>
+                 <p class="list">Веб-сайт</p>
              </li>
              <li>
                  <img src="./images/studio-7.jpg" alt="Издание Limited Edition">
@@ -87,12 +87,12 @@
              <li>
                  <img src="./images/studio-8.jpg" alt="">
                  <h2 class="title">Проект LAB</h2>
-                <p>Маркетинг</p>
+                <p class="list">Маркетинг</p>
              </li>
              <li>
                  <img src="./images/studio-9.jpg" alt="Growing Business">
                  <h2 class="title">Growing Business</h2>
-                 <p>Приложение</p>
+                 <p class="list">Приложение</p>
              </li>
          </ul>
      </section>
@@ -103,7 +103,7 @@
         <address class="adres">
     
            <ul class="contact">
-            <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
             <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
         </ul>
