--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
               <ul class="feature-list">
                   <li>
                      <a href="">
-                          <img src="./images/box-1.jpg" alt="компютер">
+                          <img src="./images/box-1.jpg" alt="компютер" width="370">
                         </a>
                     </li>    
                     <li>
                       <a href="">
-                            <img src="./images/box-2.jpg" alt="робоча зона">
+                            <img src="./images/box-2.jpg" alt="робоча зона " width="370">
                       </a>
                     </li>
                     <li>
                        <a href="">
-                           <img src="./images/box-3.jpg" alt="планшет">
+                           <img src="./images/box-3.jpg" alt="планшет" width="370">
                         </a>
                   </li>
               </ul>
@@ -85,22 +85,22 @@
     <h2 class="section-title">Наша команда</h2>
       <ul>
           <li>
-              <img src="./images/img.jpg" alt="Product Designer">
+              <img src="./images/img.jpg" alt="Product Designer" width="270">
               <h3 class="item">Игорь Демьяненко</h3>
               <p class="link">Product Designer</p>
           </li>
           <li>
-              <img src="./images/img-(1).jpg" alt="Frontend Developer">
+              <img src="./images/img-(1).jpg" alt="Frontend Developer" width="270">
               <h3 class="item">Ольга Репина</h3>
               <p class="link">Frontend Developer</p>
           </li>
           <li>
-              <img src="./images/img-(2).jpg" alt="Marketing">
+              <img src="./images/img-(2).jpg" alt="Marketing" width="270">
               <h3 class="item">Николай Тарасов</h3>
               <p class="link">Marketing</p>
           </li>
           <li>
-              <img src="./images/img-(3).jpg" alt="UI Designer">
+              <img src="./images/img-(3).jpg" alt="UI Designer" width="270">
               <h3 class="item">Михаил Ермаков</h3>
               <p class="link">UI Designer</p>
           </li>
