--- a/potrfolio.html
+++ b/potrfolio.html
@@ -50,47 +50,47 @@
          <h1 class="visually-hidden">работы</h1>
          <ul>
              <li>
-                 <img src="./images/studio-1.jpg" alt="Технокряк">
+                 <img src="./images/studio-1.jpg" alt="Технокряк" width="370">
                  <h2 class="title">Технокряк</h2>
                  <p class="list">Веб-сайт</p>
              </li>
              <li>
-                 <img src="./images/studio-2.jpg" alt="Постер">
                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                 <img src="./images/studio-2.jpg" alt="Постер" width="370">
                  <p class="list">Дизайн</p>
              </li>
              <li>
-                 <img src="./images/studio-3.jpg" alt="Названіе ресторана">
+                 <img src="./images/studio-3.jpg" alt="Названіе ресторана" width="370">
                  <h2 class="title">Ресторан Seafood</h2>
                  <p class="list">Приложение</p>
              </li>
              <li>
-                 <img src="./images/studio-4.jpg" alt="Наушники">
+                 <img src="./images/studio-4.jpg" alt="Наушники" width="370">
                  <h2 class="title">Проект Prime</h2>
                  <p class="list">Маркетинг</p>
              </li>
              <li>
-                 <img src="./images/studio-5.jpg" alt="Проект Boxes">
+                 <img src="./images/studio-5.jpg" alt="Проект Boxes" width="370">
                  <h2 class="title">Проект Boxes</h2>
                  <p class="list">Приложение</p>
              </li>
              <li>
-                 <img src="./images/studio-6.jpg" alt="Inspiration has no Borders">
+                 <img src="./images/studio-6.jpg" alt="Inspiration has no Borders" width="370">
                  <h2 class="title">Inspiration has no Borders</h2>
                  <p class="list">Веб-сайт</p>
              </li>
              <li>
-                 <img src="./images/studio-7.jpg" alt="Издание Limited Edition">
+                 <img src="./images/studio-7.jpg" alt="Издание Limited Edition" width="370">
                  <h2 class="title">Издание Limited Edition</h2>
                  <p>Дизайн</p>
              </li>
              <li>
-                 <img src="./images/studio-8.jpg" alt="">
+                 <img src="./images/studio-8.jpg" alt="Проект LAB" width="370">
                  <h2 class="title">Проект LAB</h2>
                 <p class="list">Маркетинг</p>
              </li>
              <li>
-                 <img src="./images/studio-9.jpg" alt="Growing Business">
+                 <img src="./images/studio-9.jpg" alt="Growing Business" width="370">
                  <h2 class="title">Growing Business</h2>
                  <p class="list">Приложение</p>
              </li>
